cps/static/css/caliBlur_override.css
body.serieslist.grid-view div.container-fluid > div > div.col-sm-10::before {
  display: none;
}

/* Make checkboxes white */
input[type=checkbox] {accent-color: #ffffff;}

.cover .badge {
  position: absolute;
  top: 0;
  left: 0;
  color: #fff;
  background-color: #cc7b19;
  border-radius: 100px;
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.6);
  margin-left: 4px;
  margin-top: 4px;
}

.cover {
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.6);
}

.cover .read {
  line-height: 15px;
  font-size: xx-small;
  position: absolute;
  top: 192px;
  width: 20px;
  height: 20px;
  display: inline-block;
  padding: 2px !important;
  left: 4px;
}

@media (max-width: 767px) {
  .cover .read {
    line-height: 15px;
    font-size: xx-small;
    position: absolute;
    top: 193px;
    width: 20px;
    height: 20px;
    display: inline-block;
    padding: 2px !important;
    left: 1px;
  }
}

input.datepicker {color: transparent}
input.datepicker:focus {color: transparent}
input.datepicker:focus + input {color: #555}

@media only screen and (max-width: 767px) {
        .row-fluid > .col-sm-2 {
        visibility: hidden;
    }
}

/* Makes the filter buttons on the homepage occupy the title bar space until there's no more room for them */

.filterheader {
  margin-bottom: 20px;
}

/* Fallback for browsers without :has() support: use JS to add .filterheader-fixed */
.filterheader-fixed {
  position: fixed;
  top: 72px;
  right: 20px;
}

@media (min-width: 915px) {
  /* Only fix .filterheader if there is NOT a .pagination element in the same .row-fluid (for browsers with :has() support) */
  .row-fluid:not(:has(.pagination)) .filterheader {
    position: fixed;
    top: 72px;
    right: 20px;
  }
}

ul#scnd-nav {
    margin-bottom: 4rem;
}

div#Downloads {
  margin: 0;
  justify-self: center;
  margin-top: 5rem !important;
}

div#Downloads_list {
    width: 100%;
    padding-bottom: 3rem;
}

/* Prevents the character button group from showing on smaller screens */
@media (max-width: 1605px) {
    .btn-group.character.hidden-sm {
        display: none;
    }
}

/* Fixes Archive and Have Read checkboxes in book view from being uniteractable */
form#have_read_form > label.block-label::before {
    top: 19px !important;
    left: 20px;
    z-index: -1 !important;
}

form#archived_form > label.block-label::before {
    top: 14px !important;
    left: 69px;
    z-index: -1 !important;
}

/* Fixing mobile book view */
@media only screen and (max-width: 767px) {
    .identifiers {
        margin-left: 220px !important;
        max-height: 26px;
        overflow: auto;
    }
    .publishers {
        margin-left: 220px !important;
    }
    .publishing-date {
        margin-left: 220px !important;
        display: flex;
        flex-wrap: wrap;
    }
    .more-stuff {
        margin-left: 220px !important;
    }
    .languages {
        margin-left: 220px !important;
        display: flex;
        flex-wrap: wrap;
    }
    .book-meta > .bookinfo > .comments, .book-meta > .description {
        font-size: 13px;
        min-height: 350px !important;
        margin-top: 40px;
    }
    #bookDetailsModal > .modal-dialog.modal-lg > .modal-content > .modal-body > div > div > div > div.col-sm-3.col-lg-3.col-xs-5 > div.cover, body > div.container-fluid > div > div.col-sm-10 > div > div > div.col-sm-3.col-lg-3.col-xs-5 > div.cover {
        width: 100%;
        max-width: 200px;
    }
    .tags {
        position: absolute;
        left: 220px;
        top: 190px;
        display: flex;
        flex-direction: column;
        flex-wrap: wrap;
        max-height: 32px;
        overflow: auto;
    }
}

@media only screen and (max-width: 470px) {
    .book-meta > h2 {
        position: absolute;
        top: 380px;
        left: -220px;
    }
    .book h2#title {
        max-width: 70vw;
        white-space: nowrap;
        text-overflow: ellipsis;
        overflow: hidden;
    }
    body.book .author {
        position: absolute;
        top: 440px;
        left: -220px;
        width: 100% !important;
        max-width: none;
    }
    .book-meta > .bookinfo > .comments, .book-meta > .description {
        margin-top: 40rem;
    }
    .publishers {
        position: absolute;
        top: 465px;
        left: -220px !important;
        margin-top: 0 !important;
        max-width: 115px;
        text-overflow: ellipsis !important;
        white-space: nowrap !important;
    }
    .publishing-date {
        position: absolute;
        top: 465px;
        left: -80px !important;
        margin-top: 0 !important;
    }
    .more-stuff {
        display: none;
    }
    .editbook .more-stuff {
        display: inherit;
    }
    .languages {
        position: absolute;
        top: 465px;
        left: 36px !important;
        margin-top: 0 !important;
    }
    .identifiers {
        display: none;
    }
    body > div.container-fluid > div > div.col-sm-10 > div > div > div.col-sm-3.col-lg-3.col-xs-5 {
        justify-self: center;
    }
    .tags {
        position: absolute;
        top: 408px;
        left: 220px;
        display: flex;
        flex-wrap: nowrap;
        flex-direction: column;
        overflow-y: auto;
        max-height: 26px;
        max-width: 130px;
        overflow-x: clip;
        flex-wrap: nowrap;
    }
    .tags a.btn.btn-xs.btn-info {
        position: sticky;
    }
    .bookinfo p#book_of {
        position: absolute;
        top: 535px;
        padding: 0;
        margin: 0;
        max-width: 400px;
        white-space: nowrap;
        text-overflow: ellipsis;
        overflow: hidden;
        max-height: 20px;
        height: 100%;
    }
}

@media only screen and (max-width: 445px) {
    .btn-group {
        height: 30px;
        min-width: max-content;
    }
}

/* Fix metadata fetch screen */
.editbook .modal-dialog.modal-lg {
    transform: translate(0px, -20px) !important;
}
@media only screen and (max-width: 767px) {
    .editbook .more-stuff {
        margin: 0 !important;
    }
}
/* Fix login screen */
.login .well {
    max-height: 520px;
    height: auto;
    border: none;
    border-radius: 0;
    -webkit-box-shadow: none;
    box-shadow: none;
    min-width: 600px;
    max-width: 700px;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: 0 auto;
    padding: 60px;
    justify-items: anchor-center;
    text-align: left;
    background: none;
}

.login .well {
    padding: 60px 10px !important;
    max-width: none !important;
    min-width: 0 !important;
}

.login .well > form {
    background: rgba(0, 0, 0, .4);
    color: hsla(0, 0%, 100%, .45);
    padding: 60px !important;
    margin-top: 60px !important;
}

body.login > div.navbar.navbar-default.navbar-static-top > div > div.navbar-header > a:hover {
    color: #ccc !important;
    background: none !important;
}

.login .navbar > .container-fluid > .navbar-header {
    margin: 0;
    background: none;
}

/* Fixes edit users page */
h2.usertable {
    padding-left: 30px;
    margin-bottom: 3rem;
    margin-top: 3rem;
}

.usertable .bootstrap-table.bootstrap3 {
    padding: 40px;
}

.usertable .errorlink {
    padding-left: 40px;
}

.usertable .col-xs-12.col-sm-12 {
    padding-left: 40px;
}

.usertable ul.pagination {
    top: 5.1em;
}

/* Enable mobile blur only when user setting applied */
@media (max-width: 767px) {
  body.allow-mobile-blur .blur-wrapper { display:block !important; }
}

@media only screen and (max-width: 767px) {
    /* Readmore.js fix: allow plugin to control height by removing forced min-height */
    .book-meta > .bookinfo > .comments[data-readmore],
    .book-meta > .description[data-readmore] {
        min-height: 0 !important; /* Option B */
    }
}

